Rationalized quite a lot of code